globus-gram-job-manager (14.15-1+gt6.@distro@) @distro@; urgency=low

  * Create proxy

 -- Globus Toolkit <support@globus.org>  Thu, 08 May 2014 06:48:05 -0400

globus-gram-job-manager (14.14-1+gt6.@distro@) @distro@; urgency=low

  * Don't use default proxy if available

 -- Globus Toolkit <support@globus.org>  Wed, 07 May 2014 15:27:03 -0400

globus-gram-job-manager (14.13-1+gt6.@distro@) @distro@; urgency=low

  * Add TAP prefix to test output

 -- Globus Toolkit <support@globus.org>  Tue, 06 May 2014 08:41:53 -0400

globus-gram-job-manager (14.12-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 21:11:54 -0400

globus-gram-job-manager (14.12-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 17:27:22 -0400

globus-gram-job-manager (14.11-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 17:04:40 -0400

globus-gram-job-manager (14.10-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 16:02:26 -0400

globus-gram-job-manager (14.9-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:53:17 -0400

globus-gram-job-manager (14.8-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:52:58 -0400

globus-gram-job-manager (14.8-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:48:18 -0400

globus-gram-job-manager (14.7-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 25 Apr 2014 15:32:13 -0400

globus-gram-job-manager (14.6-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes
