@@ -68,7 +68,7 @@ else
     export CONTACT_STRING="$contact"
 fi
 
-grid-proxy-init || true 
+grid-proxy-destroy || true 
 
 # Perl scripts pass through, otherwise run the program under valgrind
 # conditionally
