@@ -1,3 +1,9 @@
+globus-gram-job-manager (14.16-1+gt6.@distro@) @distro@; urgency=low
+
+  * Unset proxy in tests
+
+ -- Globus Toolkit <support@globus.org>  Thu, 08 May 2014 09:21:12 -0400
+
 globus-gram-job-manager (14.15-1+gt6.@distro@) @distro@; urgency=low
 
   * Create proxy
